# game-samples

./: .gitignore  CMakeLists.txt  Games.project  LICENSE.txt  README.md
CharacterController/: CMakeLists.txt  CharacterController.cpp  CharacterController.h  main.cpp
Demo/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
Generic/Game/: sounds.xml
Generic/Levels/character_controller/: character_controller.level
Generic/Levels/memory/: memory.level
Generic/Levels/sounds/: sounds.level
Generic/Levels/table/: table.level
Generic/Resources/Animations/: pc_warrior.attack5.skelanim  pc_warrior.idle.skelanim  pc_warrior.run.skelanim  pc_warrior.skelanim
Generic/Resources/Material/: module_straigh_line_01.materials  module_straight_line_01.materials  module_turn_01.materials  pc_warrior.materials
Generic/Resources/Meshes/: pc_warrior.mesh  pc_warrior_000.submesh
Generic/Resources/MetaAnimation/: pc_warrior.pc_warrior.attack5.00.anim  pc_warrior.pc_warrior.idle.01.anim  pc_warrior.pc_warrior.run.01.anim
Generic/Resources/Shaders/: Fonts.fx  Fonts.glfx
Generic/Resources/Sprites/: memory.recto_carre.tga  memory.recto_carre_vert.tga  memory.recto_croix.tga  memory.recto_croix_vert.tga  memory.recto_rond.tga  memory.recto_rond_vert.tga  memory.recto_triangle.tga  memory.recto_triangle_vert.tga  memory.verso.tga  memory.win.tga  pong.balle.tga  pong.fond.tga  pong.raquette.tga  shine.logo.tga  sounds.background.tga  sounds.button_green.tga  sounds.button_green_play.tga  sounds.button_green_stop.tga
Generic/Resources/String/: english.string_table  french.string_table  german.string_table  italian.string_table  spanish.string_table
Generic/Resources/Textures/: pc_warrior_color.tga  pc_warrior_envmsk.tga  pc_warrior_illu.tga  pc_warrior_nrm.tga  pc_warrior_opa.tga  pc_warrior_spec.tga
Memory/: CMakeLists.txt  Memory.cpp  Memory.h  main.cpp
Pong/: CMakeLists.txt  Pong.cpp  Pong.h  main.cpp
Sounds/: CMakeLists.txt  Sounds.cpp  Sounds.h  main.cpp
cmake/Modules/: FindXAudio.cmake  FindXInput.cmake
